@@ -1,3 +1,11 @@
+2022-10-16T08:08:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3258764625 # 525
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 74 87 / 77 90
+* notice: next accum: outdated-unq outdated-all / unq all: 75 88 / 77 90
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-10-02] / []
+
 2022-10-14T08:12:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3248417122 # 519
 * notice: last 14d: unq all: 3 3
